--- a/ParticleAcceleration.yaml
+++ b/ParticleAcceleration.yaml
@@ -5,7 +5,8 @@ Proton10e20b1:
         unit: !astropy.units.Unit {unit: eV}
     charge: 1.
     beta:   1.
-    label: "Proton 10$^{20}$ eV, $\\beta=1$"
+    label_de: "Proton 10$^{20}$ eV, $\\beta=1$"
+    label_en: "Proton 10$^{20}$ eV, $\\beta=1$"
     color: "r"
     linestyle: "-"
 
@@ -15,7 +16,8 @@ Proton10e20b001:
         unit: !astropy.units.Unit {unit: eV}
     charge: 1.
     beta:   0.01
-    label: "Proton 10$^{20}$ eV, $\\beta=0.01$"
+    label_de: "Proton 10$^{20}$ eV, $\\beta=0.01$"
+    label_en: "Proton 10$^{20}$ eV, $\\beta=0.01$"
     color: "r"
     linestyle: "--"
 
@@ -25,7 +27,8 @@ Iron10e20b1:
         unit: !astropy.units.Unit {unit: eV}
     charge: 26.
     beta:   1.
-    label: "Eisen 10$^{20}$ eV, $\\beta=1$"
+    label_de: "Eisen 10$^{20}$ eV, $\\beta=1$"
+    label_en: "Iron 10$^{20}$ eV, $\\beta=1$"
     color: "b"
     linestyle: "-"
 
@@ -35,6 +38,7 @@ Iron10e20b001:
         unit: !astropy.units.Unit {unit: eV}
     charge: 26.
     beta:   0.01
-    label: "Eisen 10$^{20}$ eV, $\\beta=0.01$"
+    label_de: "Eisen 10$^{20}$ eV, $\\beta=0.01$"
+    label_en: "Iron 10$^{20}$ eV, $\\beta=0.01$"
     color: "b"
     linestyle: "--"
